--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,13 @@ fastapi
 uvicorn[standard]
 pydantic
 azure-identity
-tkinter
+asgiref
+Django
+django-cors-headers
+djangorestframework
+djangorestframework-simplejwt
+PyJWT
+pytz
+sqlparse
+psycopg2-binary
+python-dotenv
